--- a/incubator/airflow/templates/statefulsets-workers.yaml
+++ b/incubator/airflow/templates/statefulsets-workers.yaml
@@ -28,6 +28,9 @@ spec:
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/configmaps.yaml") . | sha256sum }}
         configmap.fabric8.io/update-on-change: "{{ template "airflow.fullname" . }}-env"
+        {{ range $key, $value := .Values.workers.pod.annotations }}
+        {{ $key }}: {{ $value | quote }}
+        {{- end }}
       labels:
         app: {{ template "airflow.name" . }}-worker
         release: {{ .Release.Name }}
