--- a/incubator/airflow/values.yaml
+++ b/incubator/airflow/values.yaml
@@ -93,6 +93,12 @@ workers:
     #   cpu: "0.5"
     #   memory: "512Mi"
   ##
+  ## Annotations for the Worker pods
+  pod:
+    annotations:
+      ## Example:
+      ## iam.amazonaws.com/role: airflow-worker-Role
+  ##
   ## Celery worker configuration
   celery:
     ##
